[package]
name = "solana_liquid-staking"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = { version = "1.6.0", features = ["derive"] }
bs58 = "0.5.1"
pinocchio = "0.9.2"
pinocchio-associated-token-account = "0.2.0"
pinocchio-system = "0.4.0"
pinocchio-token = "0.4.0"
solana-pubkey = "4.0.0"
spl-token = "9.0.0"
thiserror = { version = "2.0", default-features = false }



[lib]
crate-type = ["lib", "cdylib"]

[dev-dependencies]
litesvm = "0.9.1"
litesvm-token = "0.9.1"
solana-program = "3.0.0"
solana-sdk = "3.0.0"
spl-associated-token-account = "8.0.0"
solana-stake-program = "4.0.0"
